DoorCEGenerator/Application/Domain/SyntaxAnalysis/DScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from d:/Praca/VSCodeProjects/rsl-bis/AntlrCSharp/DScript.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class DScriptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		NUMBER=46, CHAR=47, STRING=48, WS=49;
	public const int
		RULE_start = 0, RULE_usecase = 1, RULE_ucconditions = 2, RULE_conditions = 3, 
		RULE_condition = 4, RULE_contextcondition = 5, RULE_valuecondition = 6, 
		RULE_mainscenario = 7, RULE_scenarios = 8, RULE_scenario = 9, RULE_sentences = 10, 
		RULE_altsentences = 11, RULE_sentence = 12, RULE_altsentence = 13, RULE_condsentence = 14, 
		RULE_endsentence = 15, RULE_resultsentence = 16, RULE_rejoinsentence = 17, 
		RULE_result = 18, RULE_repsentence = 19, RULE_svosentence = 20, RULE_altsvosentence = 21, 
		RULE_step = 22, RULE_systemstep = 23, RULE_toactorpredicate = 24, RULE_showpredicate = 25, 
		RULE_closepredicate = 26, RULE_tosystempredicate = 27, RULE_readpredicate = 28, 
		RULE_updatepredicate = 29, RULE_deletepredicate = 30, RULE_checkpredicate = 31, 
		RULE_executepredicate = 32, RULE_userstep = 33, RULE_selectpredicate = 34, 
		RULE_enterpredicate = 35, RULE_invoke = 36, RULE_sysinvoke = 37, RULE_notiondef = 38, 
		RULE_viewnotion = 39, RULE_viewtype = 40, RULE_triggernotion = 41, RULE_triggertype = 42, 
		RULE_namesandlabels = 43, RULE_datanotion = 44, RULE_attributes = 45, 
		RULE_attribute = 46, RULE_unique = 47, RULE_required = 48, RULE_auxiliary = 49, 
		RULE_multnotion = 50, RULE_datatype = 51, RULE_names = 52, RULE_actor = 53, 
		RULE_notion = 54, RULE_value = 55, RULE_name = 56, RULE_uilabel = 57, 
		RULE_label = 58, RULE_altlabel = 59, RULE_labelref = 60;
	public static readonly string[] ruleNames = {
		"start", "usecase", "ucconditions", "conditions", "condition", "contextcondition", 
		"valuecondition", "mainscenario", "scenarios", "scenario", "sentences", 
		"altsentences", "sentence", "altsentence", "condsentence", "endsentence", 
		"resultsentence", "rejoinsentence", "result", "repsentence", "svosentence", 
		"altsvosentence", "step", "systemstep", "toactorpredicate", "showpredicate", 
		"closepredicate", "tosystempredicate", "readpredicate", "updatepredicate", 
		"deletepredicate", "checkpredicate", "executepredicate", "userstep", "selectpredicate", 
		"enterpredicate", "invoke", "sysinvoke", "notiondef", "viewnotion", "viewtype", 
		"triggernotion", "triggertype", "namesandlabels", "datanotion", "attributes", 
		"attribute", "unique", "required", "auxiliary", "multnotion", "datatype", 
		"names", "actor", "notion", "value", "name", "uilabel", "label", "altlabel", 
		"labelref"
	};

	private static readonly string[] _LiteralNames = {
		null, "'Use case'", "'{'", "'}'", "';'", "'user'", "'?'", "'-'", "'Main scenario'", 
		"'Scenario'", "'['", "']'", "'->'", "'end'", "'!'", "'rejoin'", "'-\"-'", 
		"'System'", "'<show>'", "'<close>'", "'<read>'", "'<update>'", "'<delete>'", 
		"'<check>'", "'<execute>'", "'<select>'", "'<enter>'", "'<invoke>'", "'View'", 
		"'*'", "'Trigger'", "','", "'Concept'", "':'", "'#'", "'string'", "'boolean'", 
		"'integer'", "'number'", "'float'", "'double'", "'duration'", "'datetime'", 
		"'time'", "'date'", "'location'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "NUMBER", 
		"CHAR", "STRING", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DScript.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static DScriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DScriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DScriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(DScriptParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public UsecaseContext[] usecase() {
			return GetRuleContexts<UsecaseContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsecaseContext usecase(int i) {
			return GetRuleContext<UsecaseContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NotiondefContext[] notiondef() {
			return GetRuleContexts<NotiondefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NotiondefContext notiondef(int i) {
			return GetRuleContext<NotiondefContext>(i);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 122;
				usecase();
				}
				}
				State = 125;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__0 );
			State = 130;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 5637144576L) != 0)) {
				{
				{
				State = 127;
				notiondef();
				}
				}
				State = 132;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 133;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsecaseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MainscenarioContext mainscenario() {
			return GetRuleContext<MainscenarioContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ScenariosContext scenarios() {
			return GetRuleContext<ScenariosContext>(0);
		}
		public UsecaseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usecase; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsecase(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsecaseContext usecase() {
		UsecaseContext _localctx = new UsecaseContext(Context, State);
		EnterRule(_localctx, 2, RULE_usecase);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135;
			Match(T__0);
			State = 136;
			name();
			State = 137;
			mainscenario();
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__8) {
				{
				State = 138;
				scenarios();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UcconditionsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ConditionsContext conditions() {
			return GetRuleContext<ConditionsContext>(0);
		}
		public UcconditionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ucconditions; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUcconditions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UcconditionsContext ucconditions() {
		UcconditionsContext _localctx = new UcconditionsContext(Context, State);
		EnterRule(_localctx, 4, RULE_ucconditions);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			Match(T__1);
			State = 142;
			conditions();
			State = 143;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConditionsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ConditionContext condition() {
			return GetRuleContext<ConditionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConditionsContext conditions() {
			return GetRuleContext<ConditionsContext>(0);
		}
		public ConditionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conditions; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConditions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConditionsContext conditions() {
		ConditionsContext _localctx = new ConditionsContext(Context, State);
		EnterRule(_localctx, 6, RULE_conditions);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145;
			condition();
			State = 148;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__3) {
				{
				State = 146;
				Match(T__3);
				State = 147;
				conditions();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConditionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ValueconditionContext valuecondition() {
			return GetRuleContext<ValueconditionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContextconditionContext contextcondition() {
			return GetRuleContext<ContextconditionContext>(0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_condition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCondition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConditionContext condition() {
		ConditionContext _localctx = new ConditionContext(Context, State);
		EnterRule(_localctx, 8, RULE_condition);
		try {
			State = 152;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 150;
				valuecondition();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 151;
				contextcondition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ContextconditionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NotionContext notion() {
			return GetRuleContext<NotionContext>(0);
		}
		public ContextconditionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_contextcondition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContextcondition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContextconditionContext contextcondition() {
		ContextconditionContext _localctx = new ContextconditionContext(Context, State);
		EnterRule(_localctx, 10, RULE_contextcondition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 154;
			notion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueconditionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NotionContext notion() {
			return GetRuleContext<NotionContext>(0);
		}
		public ValueconditionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_valuecondition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValuecondition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueconditionContext valuecondition() {
		ValueconditionContext _localctx = new ValueconditionContext(Context, State);
		EnterRule(_localctx, 12, RULE_valuecondition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 158;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__4:
				{
				State = 156;
				Match(T__4);
				}
				break;
			case CHAR:
			case STRING:
				{
				State = 157;
				notion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 160;
			Match(T__5);
			State = 162;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__6) {
				{
				State = 161;
				Match(T__6);
				}
			}

			State = 164;
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MainscenarioContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SentencesContext sentences() {
			return GetRuleContext<SentencesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EndsentenceContext endsentence() {
			return GetRuleContext<EndsentenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UcconditionsContext ucconditions() {
			return GetRuleContext<UcconditionsContext>(0);
		}
		public MainscenarioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mainscenario; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMainscenario(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainscenarioContext mainscenario() {
		MainscenarioContext _localctx = new MainscenarioContext(Context, State);
		EnterRule(_localctx, 14, RULE_mainscenario);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 166;
			Match(T__7);
			State = 168;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 167;
				ucconditions();
				}
			}

			State = 170;
			sentences();
			State = 171;
			endsentence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScenariosContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ScenarioContext scenario() {
			return GetRuleContext<ScenarioContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ScenariosContext scenarios() {
			return GetRuleContext<ScenariosContext>(0);
		}
		public ScenariosContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scenarios; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScenarios(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScenariosContext scenarios() {
		ScenariosContext _localctx = new ScenariosContext(Context, State);
		EnterRule(_localctx, 16, RULE_scenarios);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 173;
			scenario();
			State = 175;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__8) {
				{
				State = 174;
				scenarios();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScenarioContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public RepsentenceContext repsentence() {
			return GetRuleContext<RepsentenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AltsentencesContext altsentences() {
			return GetRuleContext<AltsentencesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EndsentenceContext endsentence() {
			return GetRuleContext<EndsentenceContext>(0);
		}
		public ScenarioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scenario; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScenario(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScenarioContext scenario() {
		ScenarioContext _localctx = new ScenarioContext(Context, State);
		EnterRule(_localctx, 18, RULE_scenario);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 177;
			Match(T__8);
			State = 178;
			repsentence();
			State = 179;
			altsentences();
			State = 180;
			endsentence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SentencesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SentenceContext sentence() {
			return GetRuleContext<SentenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SentencesContext sentences() {
			return GetRuleContext<SentencesContext>(0);
		}
		public SentencesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sentences; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSentences(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SentencesContext sentences() {
		SentencesContext _localctx = new SentencesContext(Context, State);
		EnterRule(_localctx, 20, RULE_sentences);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 182;
			sentence();
			State = 184;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__9 || _la==NUMBER) {
				{
				State = 183;
				sentences();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AltsentencesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AltsentenceContext altsentence() {
			return GetRuleContext<AltsentenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AltsentencesContext altsentences() {
			return GetRuleContext<AltsentencesContext>(0);
		}
		public AltsentencesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_altsentences; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAltsentences(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AltsentencesContext altsentences() {
		AltsentencesContext _localctx = new AltsentencesContext(Context, State);
		EnterRule(_localctx, 22, RULE_altsentences);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 186;
			altsentence();
			State = 188;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__9 || _la==CHAR) {
				{
				State = 187;
				altsentences();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SentenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SvosentenceContext svosentence() {
			return GetRuleContext<SvosentenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CondsentenceContext condsentence() {
			return GetRuleContext<CondsentenceContext>(0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sentence; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSentence(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SentenceContext sentence() {
		SentenceContext _localctx = new SentenceContext(Context, State);
		EnterRule(_localctx, 24, RULE_sentence);
		try {
			State = 192;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUMBER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 190;
				svosentence();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 2);
				{
				State = 191;
				condsentence();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AltsentenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AltsvosentenceContext altsvosentence() {
			return GetRuleContext<AltsvosentenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CondsentenceContext condsentence() {
			return GetRuleContext<CondsentenceContext>(0);
		}
		public AltsentenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_altsentence; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDScriptVisitor<TResult> typedVisitor = visitor as IDScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAltsentence(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AltsentenceContext altsentence() {
		AltsentenceContext _localctx = new AltsentenceContext(Context, State);
		EnterRule(_localctx, 26, RULE_altsentence);
		try {
			State = 196;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case CHAR:
				EnterOuterAlt(_localctx, 1);
				{
				State = 194;
				altsvosentence();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 2);
				{
				State = 195;
				condsentence();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
